tests/od2trips/errors/format/o/o_time_end_false/errors.od2trips
Error: Broken period definition '0.00 a'.
Quitting (on error).
